2005-07-07  Ben Elliston  <bje@gnu.org>

	* config.bfd: Mark m68*-*-rtemscoff as obsolete.

2005-07-06  H.J. Lu  <hongjiu.lu@intel.com>

	* dwarf2.c (varinfo): Add addr.
	(lookup_symbol_in_variable_table): Also check addr.
	(scan_unit_for_symbols): Set addr for variable.
	(comp_unit_find_line): Updated.

2005-07-06  Nick Clifton  <nickc@redhat.com>

	* coff-alpha.c (alpha_adjust_reloc_in): Issue an informative error
	message if an unknown reloc is encountered.
	(alpha_relocate_section): Likewise.

	* ecoff.c (_bfd_ecoff_write_object_contents): Cope with a reloc
	with a missing howto field.

2005-07-06  Alan Modra  <amodra@bigpond.net.au>

	* po/SRC-POTFILES.in: Add cpu-ms1.c, elf32-ms1.c, elf-vxworks.c,
	elfxx-sparc.c.

2005-07-05  Paul Brook  <paul@codesourcery.com>

	* elf32-ppc.c (ppc_elf_vxworks_special_sections): Remove.
	(ppc_elf_vxworks_get_sec_type_attr): New function.
	(elf_backend_special_sections): Remove vxwords definition.
	(elf_backend_get_sec_type_attr): Define for vxworks.

2005-07-05  Nick Clifton  <nickc@redhat.com>

	* elf64-ppc.c (ppc64_elf_info_to_howto): Fix typo.

2005-07-05  Paul Brook  <paul@codesourcery.com>

	* config.bfd: Add separate case for ppc-vxworks.
	* configure: Regenerate.
	* configure.in: Include elf-vxworks.lo on ppc targets.
	* elf-vxworks.c (elf_vxworks_final_write_processing): Handle
	.rela.plt.unloaded.
	* elf32-ppc.c: Add VxWorks target vec.	Include elf-vxworks.h.
	(PLT_ENTRY_SIZE, PLT_INITIAL_ENTRY_SIZE, PLT_SLOT_SIZE): Remove.
	(VXWORKS_PLT_ENTRY_SIZE, ppc_elf_vxworks_plt_entry,
	ppc_elf_vxworks_pic_plt_entry, VXWORKS_PLT_INITIAL_ENTRY_SIZE,
	ppc_elf_vxworks_plt0_entry, ppc_elf_vxworks_pic_plt0_entry,
	VXWORKS_PLT_NON_JMP_SLOT_RELOCS, VXWORKS_PLTRESOLVE_RELOCS,
	VXWORKS_PLTRESOLVE_RELOCS_SHLIB): New.
	(ppc_elf_link_hash_table): Add srelplt2, sgotplt, hgot, hplt,
	is_vxworks, plt_entry_size, plt_slot_size, plt_initial_entry_size.
	(ppc_elf_link_hash_table_create): Initialize hadtab plt fields.